<resources>
    <string name="app_name">Exercise 4</string>
    <string name="create">Create</string>
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="asynctask_activity">AsyncTask Activity</string>
    <string name="loader_activity">Loader Activity</string>
    <string name="threads_activity">Threads Activity</string>
    <string name="start_value">0</string>
    <string name="null_pointer_text_create">You should press button Create before!</string>
    <string name="null_pointer_text_start">You should press button Start before!</string>
    <string name="asynctask_cancelled">AsyncTask cancelled</string>
    <string name="asynctask_created">AsyncTask created</string>
    <string name="done">Done!</string>
    <string name="thread_created">Thread created!</string>
    <string name="thread_cancelled">Thread cancelled!</string>
    <string name="loader_cancelled">Loader cancelled</string>
</resources>
