<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/async_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:layout_above="@id/loader"
        android:layout_marginEnd="@dimen/default_margin"
        android:text="@string/asynctask_activity"
        android:layout_centerHorizontal="true"
         />

    <Button
        android:id="@+id/loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loader_activity"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <Button
        android:id="@+id/threads"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_below="@id/loader"
        android:text="@string/threads_activity"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>