<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AsyncTaskActivity">

    <LinearLayout
        android:id="@+id/buttonsLay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/default_margin">

        <Button
            android:id="@+id/create_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create"
            android:layout_marginEnd="@dimen/default_margin"
            tools:ignore="ButtonStyle"
            android:visibility="gone"/>
        <Button
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_marginStart="@dimen/default_margin"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <TextView
        android:id="@+id/counter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/buttonsLay"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:textColor="#ffffff"
        android:textSize="@dimen/counter_size"
        android:gravity="center_horizontal|center_vertical"
        android:background="#FF0000FF"/>


</RelativeLayout>